# nix-store-explorer

./: .gitignore  flake.nix  pyproject.toml  result  ruff.toml
.github/workflows/: main.yml
api/: app.py
api/auth/: auth.py  database.py  manager.py  schemas.py
api/db/: db.py
api/dependencies/: store.py
api/logic/: core.py  exceptions.py
api/repositories/: stores.py
api/services/: stores.py
api/store/: logic.py  router.py
api/store/models/: closure.py  package.py  path.py  store.py
api/store/schemas/: package.py  path.py
api/tests/locust/: locustfile.py
api/tests/unit/: test_auth_endpoints.py  test_password_security.py  test_store_endpoints.py  test_store_logic.py  test_store_service.py  test_utils_repository.py
api/tests/unit/tests_auth/: test_auth.py  test_database.py  test_manager.py
api/tests/unit/tests_db/: test_db.py
api/tests/unit/tests_dependencies/: test_store.py
api/tests/unit/tests_repositories/: test_stores.py
api/tests/unit/tests_services/: test_store_service.py
api/tests/unit/tests_store/: test_logic.py
api/utils/: repository.py
nix_store_explorer/: app.py
nix_store_explorer/auth/: auth.py  database.py  manager.py  schemas.py
nix_store_explorer/db/: db.py
nix_store_explorer/dependencies/: store.py
nix_store_explorer/logic/: core.py
nix_store_explorer/repositories/: stores.py
nix_store_explorer/services/: stores.py
nix_store_explorer/store/: router.py
nix_store_explorer/store/models/: package.py  store.py
nix_store_explorer/utils/: repository.py
src/: __main__.py  app.py  frontend.py
src/auth/: auth.py  database.py  manager.py  schemas.py
src/db/: db.py
src/dependencies/: store.py
src/logic/: core.py  exceptions.py
src/repositories/: stores.py
src/services/: stores.py
src/store/: router.py
src/store/models/: package.py  store.py
src/store/schemas/: package.py  store.py
src/utils/: repository.py
streamlit/: frontend.py
tests/: test_frontend.py  test_recoverability.py
tests/performance/: locustfile.py
tests/unit/: test_auth_endpoints.py  test_frontend.py  test_package_service.py  test_password_security.py  test_store_endpoints.py  test_store_logic.py  test_store_service.py  test_utils_repository.py
