[tool.poetry]
name = "nix-store-web"
version = "0.1.0"
description = ""
authors = ["ilnarkhasanov <4sitescarp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
streamlit = "^1.33.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
