[tool.poetry]
name = "nix-store-explorer"
version = "0.1.0"
description = ""
authors = ["ilnarkhasanov <4sitescarp@gmail.com>"]
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
fastapi-users = "^13.0.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
pyarrow = "<16.0.0"

[tool.poetry.scripts]
nix-store-explorer = "src.app:main"


[tool.poetry.group.ui.dependencies]
streamlit = "^1.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
  "src"
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  # "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

ignore = ["E501"]

isort.known-first-party = [
  "src"
]
