[tool.poetry]
name = "nix-store-explorer"
version = "0.1.0"
description = ""
authors = ["ilnarkhasanov <4sitescarp@gmail.com>"]
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pytest-asyncio = "^0.23.6"

[tool.poetry.group.api.dependencies]
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
fastapi-users = "^13.0.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
pyarrow = "<16.0.0"

[tool.poetry.group.ui.dependencies]
streamlit = "^1.33.0"
extra-streamlit-components = "^0.1.71"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
pytest = "^8.1.1"
locust = "^2.26.0"

[tool.poetry.scripts]
nix-store-explorer = "src.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
  "src"
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  # "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

ignore = ["E501"]

isort.known-first-party = [
  "src"
]
